--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Pacifico&family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         margin: 0;
