--- a/src/assets/tarjeta.html
+++ b/src/assets/tarjeta.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Tarjeta de Presentación - Titi's Nails</title>
+    <title>Tarjeta de Presentación - Blossom Nail Studio</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Pacifico&display=swap");
 
@@ -16,7 +16,6 @@
         font-family: "Montserrat", sans-serif;
       }
 
-      /* Medida estándar de tarjeta (3.5 x 2 pulgadas) a alta resolución */
       .business-card {
         width: 1050px;
         height: 600px;
@@ -26,11 +25,9 @@
         display: flex;
         overflow: hidden;
         position: relative;
-        /* Mantenemos el borde rosado coquette que combina lindo con el lavanda */
         border: 4px dashed #f2c5cc;
       }
 
-      /* Lado Izquierdo - Branding (Fondo blanco/crema) */
       .card-left {
         flex: 1.2;
         background: #fffafa;
@@ -65,7 +62,6 @@
         text-transform: uppercase;
       }
 
-      /* Lado Derecho - Contacto y QR (Fondo LAVANDA CORRECTO) */
       .card-right {
         flex: 1;
         display: flex;
@@ -73,16 +69,15 @@
         justify-content: center;
         align-items: center;
         padding: 40px;
-        /* ¡CORREGIDO! Usamos el color lavanda exacto de tu imagen */
         background: #ebd4f4;
       }
 
       .contact-info {
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 40px;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 25px;
       }
 
       .contact-item {
@@ -90,11 +85,10 @@
         align-items: center;
         gap: 20px;
         font-size: 28px;
-        color: #c06c84; /* Texto oscuro para buen contraste */
-        font-weight: 800;
+        color: #333;
+        font-weight: 600;
       }
 
-      /* Iconos en el tono rosado intenso para que destaquen sobre el lavanda */
       .icon {
         width: 45px;
         height: 45px;
@@ -106,22 +100,21 @@
       }
 
       .qr-section img {
-        width: 300px;
-        height: 300px;
+        width: 220px;
+        height: 220px;
         border-radius: 15px;
-        border: 4px solid #ebd4f4;
+        border: 4px solid #ffffff;
         padding: 10px;
-        background: #ebd4f4;
+        background: #ffffff;
       }
 
       .qr-section p {
-        margin-top: 10px;
+        margin-top: 15px;
         font-size: 22px;
         font-weight: 700;
         color: #c06c84;
       }
 
-      /* Detalles decorativos */
       .sparkle {
         position: absolute;
         color: #f3e5ab;
@@ -135,7 +128,7 @@
         <span class="sparkle" style="top: 40px; left: 40px">✨</span>
         <span class="sparkle" style="bottom: 40px; right: 40px">✨</span>
 
-        <img src="logo.png" alt="Titi's Nails Logo" class="logo" />
+        <img src="logo.png" alt="Blossom Nail Studio Logo" class="logo" />
 
         <h1>Victoria Tovar</h1>
         <h2>Nail Artist</h2>
@@ -166,7 +159,7 @@
                 d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.469h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.469h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"
               />
             </svg>
-            <span>Titi's Nails</span>
+            <span>Blossom Nail Studio</span>
           </div>
         </div>
 
